objects/Contact.object
<CustomObject>
    <fields>
        <fullName>vlocity_ins__LanguagesSpoken__c</fullName>
        <label>Languages Spoken</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>Cantonese</fullName>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
                <value>
                    <fullName>German</fullName>
                </value>
                <value>
                    <fullName>Hawaiian</fullName>
                </value>
                <value>
                    <fullName>Ilocano</fullName>
                </value>
                <value>
                    <fullName>Japanese</fullName>
                </value>
                <value>
                    <fullName>Mandarin</fullName>
                </value>
                <value>
                    <fullName>Samoan</fullName>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
                <value>
                    <fullName>Tagalog</fullName>
                </value>
                <value>
                    <fullName>Thai</fullName>
                </value>
                <value>
                    <fullName>Tongan</fullName>
                </value>
                <value>
                    <fullName>Vietnamese</fullName>
                </value>
                <value>
                    <fullName>Sign Language</fullName>
                </value>
                <value>
                    <fullName>Other Language</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__LastContactbyRecordOwner__c</fullName>
        <label>Last Contact by Record Owner</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Location__c</fullName>
        <label>Region</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__MiddleName__c</fullName>
        <label>Middle Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__NPNNumber__c</fullName>
        <label>National Producer Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__NetWorth__c</fullName>
        <label>Net Worth</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Occupation__c</fullName>
        <description>A description of the occupation of this individual--potentially helpful in determining the credit-worthiness of the individual.</description>
        <label>Occupation</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PartnerTier__c</fullName>
        <label>Partner Tier</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bronze</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Platinum</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__PartyId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>One-to-One relationship to Party Object</description>
        <label>Party</label>
        <referenceTo>vlocity_ins__Party__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PremiumYear__c</fullName>
        <label>Premium Year</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PrimaryAgencyBrokeragePartyId__c</fullName>
        <formula>Account.vlocity_ins__PartyId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Agency/Brokerage Party</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PrimaryAgencyBrokerageRecordTypeId__c</fullName>
        <formula>Account.RecordType.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PrimaryAgency/Brokerage Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PrimaryEmployerId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Employer</description>
        <label>Employer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Employees</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PrimaryLocationAccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Provider Account</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>ProviderLocation</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Provider</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contacts (Primary Provider Account)</relationshipLabel>
        <relationshipName>ProviderLocationContacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ProducerNumber__c</fullName>
        <label>Producer Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ProviderIdentifier__c</fullName>
        <externalId>true</externalId>
        <label>Provider Identifier</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ProviderIsAcceptingNewPatients__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Accepts new patients</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__SocialSecurityNumber__c</fullName>
        <description>An 11-character encrypted text field useful for storing the tax identifier of this individual.</description>
        <label>Social Security Number</label>
        <length>11</length>
        <maskChar>X</maskChar>
        <maskType>ssn</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__StateOfIssuance__c</fullName>
        <description>Used with Driver&apos;s License Number. Identifies the state or country that issued the specified driver&apos;s license number.</description>
        <label>State of Issuance</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
                <value>
                    <fullName>NV</fullName>
                </value>
                <value>
                    <fullName>NH</fullName>
                </value>
                <value>
                    <fullName>NJ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__Status__c</fullName>
        <description>Status of this Contact such as active, inactive, expired or pending. Values can be customized by the deploying company. Custom logic should also set the IsActive__c field correspondingly; e.g. inactive, expired and pending may all translate to IsActive__c = False.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__TaxId__c</fullName>
        <description>A 10-character identifier useful for storing a tax id separate from the social security number of this individual.</description>
        <label>Tax ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__TobaccoUse__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tobacco Use</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Type__c</fullName>
        <description>The type of individual. Most useful for partner employees tracked as contacts.</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Licensed Agent</fullName>
                </value>
                <value>
                    <fullName>Broker</fullName>
                </value>
                <value>
                    <fullName>Associate Agent</fullName>
                </value>
                <value>
                    <fullName>Managing Agent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__UserEmployeeNumber__c</fullName>
        <formula>vlocity_ins__UserId__r.EmployeeNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Employee Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__UserId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>UserId</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__WebSite__c</fullName>
        <label>Web Site</label>
        <type>Url</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CONTACT.RECORDTYPE</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <recordTypes>
        <fullName>Concierge</fullName>
        <active>true</active>
        <label>Concierge</label>
    </recordTypes>
    <recordTypes>
        <fullName>Member_Enrollment</fullName>
        <active>true</active>
        <label>Member Enrollment</label>
    </recordTypes>
    <recordTypes>
        <fullName>Producer</fullName>
        <active>true</active>
        <label>Producer</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_ins__Contact</fullName>
        <active>true</active>
        <label>Standard Contact</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_ins__MobilePhoneContact</fullName>
        <active>true</active>
        <label>MobilePhoneContact</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_ins__Producer</fullName>
        <active>true</active>
        <label>Producer</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_ins__Provider</fullName>
        <active>true</active>
        <label>Provider</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>vlocity_ins__EnforceSocialSecurityNumberlength</fullName>
        <active>true</active>
        <errorConditionFormula>vlocity_ins__SocialSecurityNumber__c !=null &amp;&amp; LEN(vlocity_ins__SocialSecurityNumber__c) != 9</errorConditionFormula>
        <errorDisplayField>vlocity_ins__SocialSecurityNumber__c</errorDisplayField>
        <errorMessage>Social Security Number is 9-digit number</errorMessage>
    </validationRules>
</CustomObject>